--- a/fintrack.client/package.json
+++ b/fintrack.client/package.json
@@ -11,17 +11,25 @@
   },
   "dependencies": {
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@radix-ui/react-progress": "^1.1.4",
+    "@radix-ui/react-select": "^2.2.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "@reduxjs/toolkit": "^2.7.0",
+    "@tailwindcss/vite": "^4.1.5",
     "antd": "^5.24.8",
     "axios": "^1.8.4",
+    "class-variance-authority": "^0.7.1",
+    "date-fns": "^4.1.0",
     "flowbite-react": "^0.11.7",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.1",
+    "recharts": "^2.15.3",
     "redux": "^5.0.1",
-    "tailwindcss": "^4.1.4"
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
