--- a/fintrack.client/package.json
+++ b/fintrack.client/package.json
@@ -32,6 +32,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.3",
     "react-router-dom": "^7.5.1",
     "recharts": "^2.15.3",
     "redux": "^5.0.1",
