--- a/FinTrack.Server/FinTrack.Server.csproj
+++ b/FinTrack.Server/FinTrack.Server.csproj
@@ -28,6 +28,9 @@
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.9.0" />
+    <PackageReference Include="itext7" Version="8.0.2" />
+    <PackageReference Include="itext7.bouncy-castle-adapter" Version="8.0.2" />
+    <PackageReference Include="EPPlus" Version="7.0.8" />
   </ItemGroup>
 
   <ItemGroup>
